--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,6 @@
     ],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
-        "react-hot-loader/babel"
+        "transform-es2015-modules-commonjs"
     ]
 }
