--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
     "presets": [
-        "@babel/env",
-        "@babel/preset-react"
+        "@babel/preset-react",
+        "@babel/preset-env"
     ],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
-        "transform-es2015-modules-commonjs"
+
+        "@babel/plugin-transform-modules-commonjs"
     ]
 }
