--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@babel/cli": "^7.4.4",
+        "@babel/plugin-transform-modules-commonjs": "^7.4.4",
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.18",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
@@ -27,7 +28,7 @@
     "dependencies": {
         "@babel/core": "^7.4.4",
         "@babel/plugin-proposal-class-properties": "^7.4.4",
-        "@babel/preset-env": "^7.4.4",
+        "@babel/preset-env": "^7.4.5",
         "@fortawesome/fontawesome-svg-core": "^1.2.18",
         "@fortawesome/free-solid-svg-icons": "^5.8.2",
         "@fortawesome/react-fontawesome": "^0.1.4",
