--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "tailwind:css": "tailwind build src/sass/tailwind.src.css -c tailwind.js -o src/sass/tailwind.css",
     "start": "npm run tailwind:css && react-scripts start",
+    "startWINDOWS": "react-scripts start",
     "build": "npm run tailwind:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
