--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-dom": "^16.9.4",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "purgecss": "^1.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "tailwindcss": "^1.1.4",
     "typescript": "^3.7.4"
@@ -28,7 +30,8 @@
     "start": "npm run build:tailwind && react-scripts start",
     "build": "npm run build:tailwind && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:post": "purgecss --css build/static/css/*.css --content build/static/index.html build/static/js/*.js --out build/static/css"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.149",
     "@types/moment": "^2.13.0",
+    "@types/react-router-dom": "^5.1.3",
     "autoprefixer": "^9.7.3",
     "node-sass": "^4.13.0",
     "postcss-cli": "^7.0.0"
