--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "build:tailwind": "tailwind build src/css/tailwind.css -o src/css/tailwind.scss",
     "start": "npm run build:tailwind && react-scripts start",
+    "start:windows": "react-scripts start",
     "build": "npm run build:tailwind && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
