--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newportfolio",
+  "name": "systemmanager_cloud",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,11 +24,12 @@
   "scripts": {
     "build:tailwind": "tailwind build src/css/tailwind.css -o src/css/tailwind.scss",
     "start": "npm run build:tailwind && react-scripts start",
-    "start:windows": "react-scripts start",
     "build": "npm run build:tailwind && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:post": "purgecss --css build/static/css/*.css --content build/static/index.html build/static/js/*.js --out build/static/css"
+    "build:post": "purgecss --css build/static/css/*.css --content build/static/index.html build/static/js/*.js --out build/static/css",
+    "start:windows": "react-scripts start",
+    "build:windows": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
