--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
   "name": "systemmanager_cloud",
-  "version": "0.1.0",
+  "author": {
+    "name": "Tigo Middelkoop",
+    "url": "https://systemmanager.io"
+  },
+  "version": "v0.0.3-alpha",
   "private": true,
+  "maintainers": [
+    {
+      "name": "Tigo Middelkoop",
+      "url": "https://systemmanager.io"
+    }
+  ],
+  "scripts": {
+    "build:tailwind": "npx tailwind build ./tailwind.css -o src/css/tailwind.scss",
+    "start": "npm run build:tailwind && react-scripts start",
+    "start:windows": "react-scripts start",
+    "build": "npm run build:tailwind && react-scripts build",
+    "build:windows": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
@@ -13,20 +32,24 @@
     "@testing-library/user-event": "^8.0.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "purgecss": "^1.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "tailwindcss": "^1.1.4",
     "typescript": "^3.7.4"
   },
-  "scripts": {
-    "build:tailwind": "npx tailwind build ./tailwind.css -o src/css/tailwind.scss",
-    "start": "npm run build:tailwind && react-scripts start",
-    "build": "npm run build:tailwind && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.149",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^13.1.6",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "autoprefixer": "^9.7.4",
+    "node-sass": "^4.13.0",
+    "postcss-cli": "^7.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,17 +65,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/jest": "^24.9.1",
-    "@types/lodash": "^4.14.149",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^13.1.6",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "autoprefixer": "^9.7.4",
-    "node-sass": "^4.13.0",
-    "postcss-cli": "^7.1.0"
   }
 }
