--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "name": "Tigo Middelkoop",
     "url": "https://systemmanager.io"
   },
-  "version": "v0.0.3-alpha",
+  "version": "v0.0.3cb-alpha",
   "private": true,
   "maintainers": [
     {
@@ -30,6 +30,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
+    "debug": "^4.1.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.12.0",
@@ -40,6 +41,7 @@
     "typescript": "^3.7.4"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.149",
     "@types/moment": "^2.13.0",
