--- a/package.json
+++ b/package.json
@@ -13,45 +13,44 @@
     }
   ],
   "scripts": {
-    "build:tailwind": "npx tailwind build ./tailwind.css -o src/css/tailwind.scss",
-    "start": "npm run build:tailwind && react-scripts start",
-    "start:windows": "react-scripts start",
-    "build": "npm run build:tailwind && react-scripts build",
-    "build:windows": "react-scripts build",
+    "prebuild": "npx tailwind build ./tailwind.css -o src/css/tailwind.scss",
+    "prestart": "npx tailwind build ./tailwind.css -o src/css/tailwind.scss",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^8.0.3",
     "debug": "^4.1.1",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
-    "tailwindcss": "^1.1.4",
-    "typescript": "^3.7.4"
+    "moment": "^2.27.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "tailwindcss": "^1.4.6",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.9.1",
-    "@types/lodash": "^4.14.149",
+    "@types/lodash": "^4.14.157",
     "@types/moment": "^2.13.0",
-    "@types/node": "^13.1.6",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "autoprefixer": "^9.7.4",
-    "node-sass": "^4.13.0",
-    "postcss-cli": "^7.1.0"
+    "@types/node": "^13.13.12",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "autoprefixer": "^9.8.4",
+    "node-sass": "^4.14.1",
+    "postcss-cli": "^7.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
