--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@popperjs/core": "^2.4.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^8.0.3",
@@ -34,6 +35,7 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-popper": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "tailwindcss": "^1.4.6",
